pfish       2005/09/21 22:13:03 UTC	(20050921-2293)
  Log:
  use me.actual instead of me.name here (fixes synch timer wallops)
  

  Modified:
	trunk/protocol/unreal.c (File Modified) 


nenolod     2005/09/21 19:19:24 UTC	(20050921-2291)
  Log:
  Add a note about viewsvn.atheme.org.
  

  Modified:
	trunk/SVN-Access (File Modified) 


nenolod     2005/09/21 18:24:09 UTC	(20050921-2289)
  Log:
  Make charybdis TS6ish. Probably does not work. Should compile though.
  

  Modified:
	trunk/protocol/charybdis.c (File Modified) 


jilles      2005/09/21 16:34:48 UTC	(20050921-2287)
  Log:
  Make it look like a proper TS5/TS6 handshake.
  

  Modified:
	trunk/testsuite/authenticate.t (File Modified) 


nenolod     2005/09/21 16:25:50 UTC	(20050921-2285)
  Log:
  Add a chanserv testsuite.
  

  Modified:
	trunk/testsuite/regchan.t (File Added) 


nenolod     2005/09/21 06:40:15 UTC	(20050921-2283)
  Log:
  Some stuff for a future testsuite.
  

  Modified:
	trunk/testsuite/ (File Added) 
	trunk/testsuite/authenticate.t (File Added) 
	trunk/testsuite/burstuser.t (File Added) 
	trunk/testsuite/reguser.t (File Added) 


pfish       2005/09/21 06:04:46 UTC	(20050921-2281)
  Log:
  add chanserv close help
  

  Modified:
	trunk/modules/chanserv/help.c (File Modified) 


nenolod     2005/09/21 00:27:40 UTC	(20050921-2279)
  Log:
  - strlcpy should have been strncpy in this case since we didn't want to null-terminate in replace() yet.
  

  Modified:
	trunk/src/function.c (File Modified) 


jilles      2005/09/19 19:23:33 UTC	(20050919-2277)
  Log:
  room -> channel
  

  Modified:
	trunk/help/cservice/mark (File Modified) 
	trunk/help/nickserv/set_noop (File Modified) 
	trunk/modules/nickserv/myaccess.c (File Modified) 
	trunk/modules/operserv/uptime.c (File Modified) 
	trunk/modules/userserv/myaccess.c (File Modified) 


pfish       2005/09/19 07:23:37 UTC	(20050919-2275)
  Log:
  remove old account stuff from help
  

  Modified: